--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Tiago Mendes</title>
   </head>
   <body>
-    <p>Bem vindo !</p>
+	<div id="top" style="width:100%; height:3em; background-color:red;align-items: center;display: flex;justify-content: center;font-family: Arial, sans-serif;font-size:30px;">
+		TIAGO MENDES
+	</div>
   </body>
 </html>
