--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>Tiago Mendes</title>
+	<link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<div id="top" style="width:100%; height:3em; background-color:red;align-items: center;display: flex;justify-content: center;font-family: Arial, sans-serif;font-size:30px;">
+	<div id="top">
 		TIAGO MENDES
 	</div>
   </body>
