--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	</div>
 	<div id="about">
-	<h1>ABOUT ME</h1>
+	<h1>ABOUT</h1>
 	<p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur sem ante. Vestibulum ac consectetur orci, mollis sodales nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque laoreet, tellus vitae interdum facilisis, nunc elit feugiat velit, varius lacinia mi dolor et dui. Aliquam nibh nunc, tristique quis malesuada id, hendrerit vitae urna. Integer vehicula volutpat nunc, ac rutrum ante. Nunc suscipit convallis magna quis vehicula. Cras dictum lobortis dolor. Etiam ut enim sed tortor lacinia tempor. Nulla id urna felis. Nam vitae sapien ac velit feugiat accumsan. Aliquam vel dui vel sapien suscipit vehicula ut et ipsum. Ut vitae sapien a urna facilisis dictum. Pellentesque volutpat velit eget blandit eleifend. Nullam eget lobortis est. Curabitur venenatis ligula eros, ac consequat tellus ornare eget.
 	</p>
