--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiago Mendes</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
