--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 	<p>
 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur sem ante. Vestibulum ac consectetur orci, mollis sodales nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque laoreet, tellus vitae interdum facilisis, nunc elit feugiat velit, varius lacinia mi dolor et dui. Aliquam nibh nunc, tristique quis malesuada id, hendrerit vitae urna. Integer vehicula volutpat nunc, ac rutrum ante. Nunc suscipit convallis magna quis vehicula. Cras dictum lobortis dolor. Etiam ut enim sed tortor lacinia tempor. Nulla id urna felis. Nam vitae sapien ac velit feugiat accumsan. Aliquam vel dui vel sapien suscipit vehicula ut et ipsum. Ut vitae sapien a urna facilisis dictum. Pellentesque volutpat velit eget blandit eleifend. Nullam eget lobortis est. Curabitur venenatis ligula eros, ac consequat tellus ornare eget.
 	</p>
-	<h1>EDUCATION</h1>
-	
+	<h1>My Projects</h1>
+	<p>
+	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
+	As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
+	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze. <br>
+	LINK : https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be
+	</p>
 	</div>
 	</div>
   </body>
