--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<p>
 	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 	As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
-	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze. <br>
+	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br>
 	LINK : https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be
 	</p>
 	</div>
