--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 		<h2>Software Developer</h2>
 		<div id="socialmedia">
 			<img src="insta_icon.png">
-			<div class="p1">@tiiagopmendes</div>
+			<a target="_blank" href="https://www.instagram.com/tiiagopmendes/"><div class="p1">@tiiagopmendes</div></a>
 		</div>
 		
 		<div id="socialmedia">
 			<img src="email_icon.png">
-			<div class="p2">tiago.p.mendes@hotmail.com</div>
+			<a target="_blank" href = "mailto: tiago.p.mendes@hotmail.com"><div class="p2">tiago.p.mendes@hotmail.com</div></a>
 		</div>
 		
 		<div id="socialmedia">
 			<img src="github_icon.png">
-			<div class="p1">TiagoMendes234</div>
+			<a target="_blank" href="https://github.com/TiagoMendes234"><div class="p1">TiagoMendes234</div></a>
 		</div>
-	
+		
+		<div id="socialmedia">
+			<img src="linkedin_icon.png">
+			<a target="_blank" href="https://www.linkedin.com/in/tiago-mendes-609737185/"><div class="p1">Tiago Mendes</div></a>
+		</div>
 	
 	</div>
 	<div id="about">
