--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
 			<img src="linkedin_icon.png">
 			<a target="_blank" href="https://www.linkedin.com/in/tiago-mendes-609737185/"><div class="p1">Tiago Mendes</div></a>
 		</div>
+		
+		<div id="socialmedia">
+			<img src="cv_icon.png">
+			<a href="cv.png" download="cv"><div class="p1">Tiago Mendes</div></a>
+		</div>		
 	
 	</div>
 	<div id="about">
