--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 		<div id="socialmedia">
 			<img src="cv_icon.png">
-			<button type="submit" onclick="window.open('cv1.pdf')"><div class="p1">Tiago Mendes</div></button>
+			<div class="p1"><button type="submit" onclick="window.open('cv1.pdf')">Tiago Mendes</button></div>
 		</div>		
 	
 	</div>
