--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 		<div id="socialmedia">
 			<img src="cv_icon.png">
-			<div class="p1"><button type="submit" onclick="window.open('cv1.pdf')">Tiago Mendes</button></div>
+			<a href="cv1.png" download><div class="p1">Tiago Mendes</div></a>
 		</div>		
 	
 	</div>
