--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		
 		<div id="socialmedia">
 			<img src="cv_icon.png">
-			<a href="cv1.png" download><div class="p1">Tiago Mendes</div></a>
+			<a href="cv1.html" download><div class="p1">Tiago Mendes</div></a>
 		</div>		
 	
 	</div>
