--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 		
 		<div id="socialmedia">
 			<img src="cv_icon.png">
-			<a href="cv1.pdf" download><div class="p1">Tiago Mendes</div></a>
+			<a href="cv1.pdf" download><div class="p1">Download Curriculum</div></a>
+		</div>
+
+		<div id="socialmedia">
+			<img src="linkedin_icon.png">
+			<a href=""><div class="p1">Projetos</div></a>
 		</div>		
 	
 	</div>
@@ -46,7 +51,7 @@
 	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 	As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
 	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br>
-	LINK : https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be
+	LINK: <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be"> Pequeno Vídeo </a>
 	</p>
 	</div>
 	</div>
