--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<div id="socialmedia">
 			<img src="linkedin_icon.png">
-			<a href=""><div class="p1">Projetos</div></a>
+			<a href="/"><div class="p1">Projetos</div></a>
 		</div>		
 	
 	</div>
