--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<div id="socialmedia">
-			<img src="linkedin_icon.png">
+			<img src="projects_icon.png">
 			<a href="/"><div class="p1">Projetos</div></a>
 		</div>		
 	
