--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
 	<div id="about">
 	<h1>ABOUT</h1>
 	<p>
-	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec efficitur sem ante. Vestibulum ac consectetur orci, mollis sodales nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque laoreet, tellus vitae interdum facilisis, nunc elit feugiat velit, varius lacinia mi dolor et dui. Aliquam nibh nunc, tristique quis malesuada id, hendrerit vitae urna. Integer vehicula volutpat nunc, ac rutrum ante. Nunc suscipit convallis magna quis vehicula. Cras dictum lobortis dolor. Etiam ut enim sed tortor lacinia tempor. Nulla id urna felis. Nam vitae sapien ac velit feugiat accumsan. Aliquam vel dui vel sapien suscipit vehicula ut et ipsum. Ut vitae sapien a urna facilisis dictum. Pellentesque volutpat velit eget blandit eleifend. Nullam eget lobortis est. Curabitur venenatis ligula eros, ac consequat tellus ornare eget.
+	Finalista de Licenciatura em Engenharia Informática no Iscte.
+Acima de tudo, apaixonado desde sempre pela área da informática. Aos 10 anos tive o meu contacto com este mundo, ao tentar criar um servidor pirata de um jogo famoso, Habbo Hotel. Durante os anos seguintes fui mexendo em blogs, mais tarde criando algum HTML e CSS sozinho.
+Após algum afastamento deste mundo, no 12º tive uma disciplina de Aplicações Informáticas onde mexi com HTML e CSS novamente e o bicho voltou desde aí, e depois de quase 3 anos de licenciatura, tenho a certeza de que esta é a minha área.
+Procuro no meu tempo livre descobrir mais sobre as linguagens que sei e começar a mexer em outras coisas que nunca fiz mas tenho interesse, como Android Studio, Unity, etc.
+Além de iniciar projetos meus por diversão, faço também alguns Coding Challenges.
+Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em equipa, porque acho que ao ajudar e ser ajudado acabamos todos por melhorar. 
 	</p>
 	<h1>My Projects</h1>
 	<p>
