--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player.
 	LINK: <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be"> Pequeno Vídeo </a>
 	</p>
+	
+	<p>
+	Java Snake Game - explain
+	LINK: <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
+	</p>
+	
 	</div>
 	</div>
   </body>
