--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	</p>
 	<h1>My Projects</h1>
 	<p>
+	My 2D Java Game <br>
 	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 	As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
 	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player.
@@ -63,8 +64,8 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	</p>
 	
 	<p>
-	Java Snake Game - explain
-	LINK: <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
+	Java Snake Game - explain <br>
+	LINK: <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
 	</p>
 	
 	</div>
