--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	
 	<p>
 	Java Snake Game - explain <br>
-	LINK: <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
+	LINK: <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
 	</p>
 	
 	</div>
