--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		
 		<div id="socialmedia">
 			<img src="cv_icon.png">
-			<a href="cv1.pdf" download><div class="p1">Download Curriculum</div></a>
+			<a href="cv_tiago_alexandre_pereira_mendes.pdf" download><div class="p1">Download Curriculum</div></a>
 		</div>
 
 		<div id="socialmedia">
