--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 		<div id="socialmedia">
 			<img src="projects_icon.png">
-			<a href="/"><div class="p1">Projetos</div></a>
+			<a href="/"><div class="p1">Projetos - Soon</div></a>
 		</div>		
 	
 	</div>
@@ -56,16 +56,16 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	</p>
 	<h1>My Projects</h1>
 	<p>
-	My 2D Java Game <br>
+	My 2D Java Game <br><br>
 	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 	As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
-	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player.
-	LINK: <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be"> Pequeno Vídeo </a>
+	The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player. <br><br>
+	<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be"> Pequeno Vídeo </a>
 	</p>
 	
 	<p>
-	Java Snake Game - explain <br>
-	LINK: <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
+	Java Snake Game - explain <br><br>
+	<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
 	</p>
 	
 	</div>
