--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Procuro no meu tempo livre descobrir mais sobre as linguagens que sei e começar
 Além de iniciar projetos meus por diversão, faço também alguns Coding Challenges.
 Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em equipa, porque acho que ao ajudar e ser ajudado acabamos todos por melhorar. 
 	</p>
-	<h1>My Projects - In Progress</h1>
+	<h1>My Projects - CSS In Progress</h1>
 	<p>
 	My 2D Java Game <br><br>
 	Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
