--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
 	</p>
 	
+	<p>
+	----------------------------------------------------<br><br>
+	Hospital Management System - Scala & JavaFX <br><br>
+	<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=n47SvYO2Pw4&feature=youtu.be"> Pequeno Vídeo </a>
+	</p>
+	
 	</div>
 	</div>
   </body>
