--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Considero-me muito empenhado e trabalhador, organizado e gosto de trabalhar em e
 	<p>
 	----------------------------------------------------<br><br>
 	Hospital Management System - Scala & JavaFX <br><br>
+	This was a group project with 2 friends for university <br><br>
 	<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=n47SvYO2Pw4&feature=youtu.be"> Pequeno Vídeo </a>
 	</p>
 	
