Fix on url's and css image

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 						As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
 						The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player. <br><br>
-						<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be"> Pequeno Vídeo </a>
+						<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=qsU7-2L8bAI&feature=youtu.be" target="_blank"> Pequeno Vídeo </a>
 					</p>
 					<br>
 				</div>
@@ -111,7 +111,7 @@
 					   <p>
 					   		Hospital Management System - Scala & JavaFX <br><br>
 					   		This was a group project with 2 friends for university <br><br>
-					   		<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU"> Pequeno Vídeo </a>
+					   		<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=8fM8dy0pCxU" target="_blank"> Pequeno Vídeo </a>
 					   </p>
 					   <br>
 				</div>
@@ -119,7 +119,7 @@
 
 			<div id="article">
 				<div id="article-image">
-					<img src="2djavagame.png" width="35%;" height="35%;">
+					<img src="hospitalmanagement.png" width="35%;" height="35%;">
 				</div>
 				<div id="article-text">
 					<h2>Hospital Management System</h2>
@@ -127,7 +127,7 @@
 						Recently started the development of a game in Java due to my programming and gaming passions, after watching a few videos on YouTube, I decided to start my own game from scratch.
 						As the progress happened, i had the idea to implement an old maze generator algorithm that I learned for fun as the map.
 						The next challenge is to create map collision. Only the borders have collision for now. I want to create an infinite level maze game. <br> The hardest part was to separate the animation sprites and animate the movement of the player. <br><br>
-						<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=n47SvYO2Pw4&feature=youtu.be"> Pequeno Vídeo </a>
+						<b>LINK:</b> <br> <a href="https://www.youtube.com/watch?v=n47SvYO2Pw4&feature=youtu.be" target="_blank"> Pequeno Vídeo </a>
 					</p>
 					<br>
 				</div>
